2001-10-09  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/bug-469671.c: Added.

	* src/z80/gen.c (shiftIntoPair): Fixed up warning.

2001-10-08  Michael Hope  <michaelh@juju.net.nz>

	* src/SDCCmain.c: Added --fommit-frame-pointer option and implemented in the z80 port.

	* src/z80/gen.c (genPlus): Fixed to work with extended stack.  Also fixed genMinus, genCmp.  genUMinus is still left.

2001-10-08  Bernhar Held  <bernhard@bernhardheld.de>

	* src/SDCCmain.c (preProcess): added define SDCC_NOOVERLAY

	* src/device/lib/_mulint.c  : removed hint: nooverlay bug

	* src/device/lib/_mullong.c : removed hint: nooverlay bug

	* src/device/lib/_divuint.c : removed hint: nooverlay bug

	* src/device/lib/_divulong.c: removed hint: nooverlay bug

	* src/device/lib/_moduint.c : removed hint: nooverlay bug

	* src/device/lib/_modulong.c: removed hint: nooverlay bug

2001-10-07  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (setupPair): Added 'extended stack' support for the z80.  Can now have local variables or parameters of more than 127 bytes in size.  Increadibly slow, but it will work.  Currently anything involving the carry flag.

	* support/Util/NewAlloc.c (freeTrace): Changed free for the gc case to not free at all.  Fixes runtime segfault.

	* support/regression/tests/scott-compare3.c (c_abcd): Fixed up casts.

2001-10-07    <johan@FRIJA>

	* device/lib/gets.c (gets): fixed the return value.

2001-10-06  Michael Hope  <michaelh@juju.net.nz>
	* src/SDCCmain.c (WRITE_SEG_LOC): Fixed up to use Safe_strdup.

	* src/SDCCpeeph.c (peepHole): Fixed all leaks.  Added trace support for freeing lines.  Optimised restart logic to re-run instead of restart.  Now compiles dscan.c on ~60MB instead of ~200MB.

	* support/Util/NewAlloc.c: Added ability to use libgc instead of malloc.  Added Safe_free and Safe_strdup.  Added trace support where you can log allocations and free all at once.
